--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,20 +9,25 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="29"/>
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="29" />
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
-    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"
+    <uses-permission
+        android:name="android.permission.QUERY_ALL_PACKAGES"
         tools:ignore="QueryAllPackagesPermission" />
 
     <uses-feature
         android:name="android.hardware.touchscreen"
         android:required="false" />
-    <uses-feature android:name="android.hardware.faketouch"
-        android:required="false"/>
+    <uses-feature
+        android:name="android.hardware.faketouch"
+        android:required="false" />
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
@@ -38,6 +43,7 @@
     <uses-feature
         android:name="android.software.leanback"
         android:required="false" />
+    <uses-feature android:glEsVersion="0x20000" />
 
     <queries>
         <intent>
@@ -49,8 +55,7 @@
             <data android:scheme="http" />
         </intent>
         <intent>
-            <action
-                android:name="android.speech.RecognitionService" />
+            <action android:name="android.speech.RecognitionService" />
         </intent>
         <intent>
             <action android:name="android.intent.action.MAIN" />
@@ -64,21 +69,21 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
-        android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
+        android:requestLegacyExternalStorage="true"
         android:screenOrientation="sensor"
+        android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:requestLegacyExternalStorage="true">
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".activity.main.MainActivity"
             android:banner="@drawable/banner"
+            android:configChanges="uiMode"
+            android:exported="true"
             android:icon="@drawable/ic_launcher"
             android:label="@string/app_name_short"
             android:launchMode="singleTask"
-            android:configChanges="uiMode"
-            android:screenOrientation="sensorLandscape"
             android:logo="@drawable/banner"
-            android:exported="true">
+            android:screenOrientation="sensorLandscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -104,17 +109,19 @@
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:windowSoftInputMode="adjustResize" />
 
-        <activity android:name=".activity.downloads.DownloadsActivity"
+        <activity
+            android:name=".activity.downloads.DownloadsActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:windowSoftInputMode="adjustResize" />
 
-        <activity android:name=".activity.IncognitoModeMainActivity"
-            android:process=":incognito"
+        <activity
+            android:name=".activity.IncognitoModeMainActivity"
+            android:configChanges="uiMode"
             android:exported="false"
             android:icon="@drawable/ic_launcher"
             android:label="@string/app_name_short"
             android:launchMode="singleTask"
-            android:configChanges="uiMode"/>
+            android:process=":incognito" />
 
         <meta-data
             android:name="android.webkit.WebView.MetricsOptOut"
@@ -122,8 +129,8 @@
 
         <service
             android:name=".service.downloads.DownloadService"
-            android:foregroundServiceType="dataSync"
-            android:exported="false"/>
+            android:exported="false"
+            android:foregroundServiceType="dataSync" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -132,7 +139,7 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/provider_paths"/>
+                android:resource="@xml/provider_paths" />
         </provider>
     </application>
 </manifest>
